istio/prod/gateway-prod.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-prod-gateway
  namespace: prod
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - app.example.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - app.example.com
    tls:
      mode: SIMPLE
      credentialName: app-prod-tls-secret
